<resources>
    <string name="app_name">AdminPanel</string>
    <string name="add">Add</string>
    <string name="event_name">Event Name: .....</string>
    <string name="event_description">Event Description : .....</string>
    <string name="event_date">Event Date : .....</string>
    <string name="event_time">Event Time : ....</string>
    <string name="event_venue">Event Venue : .....</string>
</resources>
