<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/display">

   <TextView
       android:id="@+id/nameTxt"
       android:layout_width="310dp"
       android:layout_height="61dp"
       android:layout_gravity="center"
       android:layout_marginTop="60dp"
       android:text="@string/event_name"
       android:textSize="25sp" />

   <TextView
       android:id="@+id/DescTxt"
       android:layout_width="311dp"
       android:layout_height="119dp"
       android:layout_marginTop="60dp"
       android:layout_gravity="center"
       android:text="@string/event_description"
       android:textSize="25sp" />

   <TextView
       android:id="@+id/dateTxt"
       android:layout_width="310dp"
       android:layout_height="61dp"
       android:layout_gravity="center"
       android:text="@string/event_date"
       android:layout_marginTop="60dp"
       android:textSize="25sp" />

   <TextView
       android:id="@+id/timeTxt"
       android:layout_width="310dp"
       android:layout_height="61dp"
       android:layout_marginTop="60dp"
       android:layout_gravity="center"
       android:text="@string/event_time"
       android:textSize="25sp" />

   <TextView
       android:id="@+id/venueTxt"
       android:layout_width="310dp"
       android:layout_height="61dp"
       android:layout_marginTop="60dp"
       android:layout_gravity="center"
       android:text="@string/event_venue"
       android:textSize="25sp" />


</LinearLayout>